Typo and minor change pass.

--- a/latex/siggraph2013/approach.tex
+++ b/latex/siggraph2013/approach.tex
@@ -5,7 +5,7 @@ We seek to facilitate the creative coloring process by automatically suggesting 
 
 Our system takes as input a pattern template and outputs suggested colorings for that template. A pattern template specifies which \emph{segments}, or connected components, in an image can be colored in and which segments must map to the same color. For example, an image of a flower on a background may have a template that specifies all petals of the flower must be the same color, and all background segments must be the same color. We refer to the set of segments that map to the same color as a \emph{color group}. Figure~\ref{fig:teaser} shows an example of a pattern template visualized in grayscale, where each lightness level identifies a different color group. This template representation is relatively easy to author from images composed of segments, such as web designs, 3D renderings, and line drawings.
 
-To generate attractive pattern colorings, a reasonable first step is to enforce that colors are by some definition `compatible' with one another. Figure~\ref{fig:ColorCompatOnly} shows several patterns whose colors receive a high score under the color compatibility model of O'Donovan et al.~\shortcite{ODonovan}. While these high-scoring colorings use attractive colors and exhibit a great degree of diversity, they also display several problems. Some background regions may be oversaturated, coming across as too `loud.' Several foreground regions have insufficient contrast with the pattern background, causing them to blend into the background and become invisible or visually jarring.
+To generate attractive pattern colorings, a reasonable first step is to enforce that colors are by some definition `compatible' with one another. Figure~\ref{fig:ColorCompatOnly} shows several patterns whose colors receive a high score under the color compatibility model of O'Donovan et al.~\shortcite{ODonovan}. While these high-scoring colorings use attractive colors and exhibit a great degree of diversity, they also display several problems. Some background regions may be oversaturated, coming across as too `loud.' Several foreground regions have insufficient contrast with the pattern background, causing them to blend uncomfortably into the background.
 
 \begin{figure}[htb]
 \centering
