--- a/latex/siggraph2013/background.tex
+++ b/latex/siggraph2013/background.tex
@@ -12,7 +12,7 @@ In the theme of user exploration, Meier and colleagues develop a suite of intera
 \paragraph{Color harmony \& compatibility}
 Computer graphics, aesthetics, and psychology research has introduced theories and models to predict the compatibility of two or more colors~\cite{CohenOrHarmonization,Munsell,PalmerColorPreference,Itten}. Recently, O'Donovan and colleagues presented a data-driven model that predicts the numeric ratings people would give to five-color `color themes'~\shortcite{ODonovan}.
 %This model is highly generalizable, and they demonstrate a variety of applications for it, including improving existing themes and suggesting colors to complete a partial theme.
-Our model includes this compatibility function. However, as we demonstrate in Section~\ref{sec:approach}, this term alone is insufficient to produce good colorings, as it does not take into account the spatial role each color plays in the pattern. Thus, our model also uses the distinguishing features of each pattern region and the relationships between regions to constrain the space of colorings that it will suggest.
+Our model includes this compatibility function. However, as we demonstrate in Section~\ref{sec:approach}, this term alone is insufficient to produce good colorings, as it does not take into account the spatial role each color plays in the pattern. Thus, our model also uses the distinguishing spatial features of each pattern region and the relationships between regions to constrain the space of colorings that it will suggest.
 
 \paragraph{Natural image colorization}
 Related to the pattern colorization problem, researchers have developed many approaches to colorizing grayscale photographic images~\cite{ScribbleColorization,TransferColorization}. The most automatic of these methods builds distributions of color variability given local texture descriptors, combines them into one energy function, and minimizes it using a graph cut algorithm~\cite{MultimodalColorization}. Our model employs similar local color distributions but bases them on features of pattern regions, rather than photographic texture patches. We also cast the problem of finding good colorizations as one of probabilistic inference, rather than optimization. This framing allows our algorithm to explore the space of colorings and suggest multiple good alternatives, whereas a graph cut yields only a single global optimum.
