--- a/latex/siggraph2013/evaluation.tex
+++ b/latex/siggraph2013/evaluation.tex
@@ -10,7 +10,7 @@ We conducted a judgement study to better understand how coloring suggestions fro
 \newcommand{\modelSource}{\emph{Model}}
 \newcommand{\compatSource}{\emph{Color Compatibility}}
 \newcommand{\randomSource}{\emph{Random}}
-We first generate coloring suggestions from four different sources----\artistSource~colorings, our \modelSource, a \compatSource-only model using the measure by O'Donovan et. al.~\shortcite{ODonovan}, and \randomSource~colorings---to be compared in the study. Next, we select 15 different pattern templates that do not have strong semantic associations and are also outside of our training set. For each pattern template, we then generate 4 coloring suggestions per source. For the \artistSource~source, we randomly choose 4 colorings from the top 45 artist colorings on COLOURlovers. For our \modelSource, we sample colors using parallel tempering for 2000 iterations and choose the top 4 results using MMR with $\lambda = 0.5$. We similarly sample \compatSource-only colorings. Finally, for the \randomSource~source, we generate 4 random colorings.
+We first generate coloring suggestions from four different sources----\artistSource~colorings, our \modelSource, a \compatSource-only model using the measure by O'Donovan et. al.~\shortcite{ODonovan}, and \randomSource~colorings---to be compared in the study. Next, we select 15 different pattern templates that do not have strong semantic associations and are also outside of our training set. For each pattern template, we then generate 4 coloring suggestions per source. For the \artistSource~source, we randomly choose 4 colorings from the top 45 artist colorings on COLOURlovers. For our \modelSource, we sample colors using parallel tempering for 2000 iterations and choose the top 4 results using MMR with $\lambda = 0.5$. We similarly sample \compatSource-only colorings. Finally, for the \randomSource~source, we generate 4 colorings uniformly at random.
 
 The study interface presents participants with a randomized grid of all 16 coloring suggestions for a pattern template. Participants are asked to chose the 4 colorings they like the most and the 4 they like the least from the grid before moving on to the next template. Each participant responds to 5 pattern templates randomly drawn from the pool of 15 and presented in random order. One template is presented twice to check for participant consistency.
 
