--- a/latex/siggraph2013/unary.tex
+++ b/latex/siggraph2013/unary.tex
@@ -36,7 +36,7 @@ We also consider the following features for individual segments within a color g
 	\item[Relative Size] The area occupied by the segment divided by the total area of the pattern.
   \item[Normalized Discrete Compactness] A relationship between the segment's boundary edges and its area~\cite{NormalizedDiscreteCompactness}.
   \item[Elongation] The relative narrowness of a segment based on its minimum area bounding box: $1-\frac{\textrm{boxWidth}}{\textrm{boxHeight}}$. A square is the least elongated.
-  \item[Radial Distance] Euclidean distance from the segment's centroid to the center of the pattern.
+  \item[Centrality] Euclidean distance from the segment's centroid to the center of the pattern.
   \item[Role Labels] A set of three binary values: {\emph{Noise}, \emph{Background}, \emph{Foreground}}. \emph{Noise} indicates if the segment was labeled as `noise' during preprocessing (Section~\ref{sec:dataset}). \emph{Background} indicates if a segment belongs to the group with the largest connected component. All other segments are labeled \emph{Foreground}.
 \end{description}
 
@@ -51,7 +51,7 @@ With a set of color properties and predictive spatial features in hand, our goal
 %%
 where $\colors_\group$ is the color of group $\group$ and $\features_\group$ are its spatial features. We weight by the area of the group $\size_\group$ as larger regions tend to have more impact on the appearance of a coloring. Similarly, for a segment $\segment$, we need the function $\segInstStats(\colors_\segment) = \ln p( \prop( \colors_\segment ) | \features_\segment) \cdot \size_\segment$. Evaluating these functions on a particular color results in a `score' for how well that color fits the given group or segment, according to the property $\prop$.
 
-Figure~\ref{fig:unaryHistograms} shows predicted distributions over lightness for two different pattern regions using training data from the top 10 artists in our dataset. The background color group, which is larger and more spread exhibits a bimodal distribution, which aligns well with the intuition that backgrounds are either dark or light but rarely of middling brightness. It favors light backgrounds, reflecting the stylistic biases of the data used for training. The smaller, more concentrated, foreground flower color group, on the other hand, strictly prefers lighter colors.
+Figure~\ref{fig:unaryHistograms} shows predicted distributions over lightness for two different pattern regions using training data from the top 10 artists in our dataset. The background color group, which is larger and more spread, exhibits a bimodal distribution, which aligns well with the intuition that backgrounds are either dark or light but rarely of middling brightness. It favors light backgrounds, reflecting the stylistic biases of the data used for training. The smaller, more concentrated, foreground flower color group, on the other hand, strictly prefers lighter colors.
 
 \begin{figure}[ht]
 \begin{tabular}{cc}
@@ -66,7 +66,7 @@ Figure~\ref{fig:unaryHistograms} shows predicted distributions over lightness fo
 
 How should we represent these distributions $p$? Closed-form continuous distributions, such as the normal distribution, are appealing for their simplicity.  However, they are unlikely to capture the nuances of data drawn from real patterns, which is often \emph{multimodal} in nature (Figure~\ref{fig:unaryHistograms}).
 
-We adapt the method of Charpiat et al.~\shortcite{MultimodalColorization}, who build multimodal distributions of colors given local texture features for grayscale image colorization. We first discretize the space of possible color property values into a finite number of bins. Next, we train a multi-class classifier on $(\prop(\colors), \features)$ pairs extracted from the training dataset. This classifier predicts, given a feature vector $\features$, the probability that its corresponding property value $\prop(\colors)$ falls into each bin. Given a new, never-before-seen feature vector, the regressor can then output a \emph{histogram} of these probabilities, one for each property value bin. The histogram is then smoothed using kernel density estimation, and the resulting density forms the final, continuous probability distribution.
+We adapt the method of Charpiat et al.~\shortcite{MultimodalColorization}, who build multimodal distributions of colors given local texture features for grayscale image colorization. We first discretize the space of possible color property values into a finite number of bins. Next, we train a multi-class classifier on $(\prop(\colors), \features)$ pairs extracted from the training dataset. This classifier predicts, given a feature vector $\features$, the probability that its corresponding property value $\prop(\colors)$ falls into each bin. Given a new, never-before-seen feature vector, the classifier can then output a \emph{histogram} of these probabilities, one for each property value bin. The histogram is then smoothed using kernel density estimation, and the resulting density forms the final, continuous probability distribution.
 
 In our implementation, we discretize the space of property values using K-means clustering with $k = 10$ on the values found in the training examples. We then use multinomial logistic regression to predict the histograms of color property values given features.
 %To ensure each pattern template in the training set has equal influence in the regression, we weight each group example by one over the number of groups in the template; segment examples are weighted similarly.
