--- a/latex/siggraph2013/introduction.tex
+++ b/latex/siggraph2013/introduction.tex
@@ -2,7 +2,7 @@
 \label{sec:introduction}
 
 %% Hook
-From graphic and web design, to fashion and fabrics, to interior design, colored patterns are everywhere. Web designers use them as main images, backgrounds, or repeating page elements, fashion designers print them on clothing and accesories, and interior designers employ them on upholstery, wallpaper, drapes, and more.
+From graphic and web design, to fashion and fabrics, to interior design, colored patterns are everywhere. Web designers use them as main images, backgrounds, or repeating page elements, fashion designers print them on clothing and accessories, and interior designers employ them on upholstery, wallpaper, drapes, and more.
 
 %% Define our problem domain
 A colored pattern has two parts: a \emph{pattern template}, which is a creative decomposition of space into regions, and a set of \emph{colors} assigned to those regions.
