--- a/latex/siggraph2013/results.tex
+++ b/latex/siggraph2013/results.tex
@@ -7,7 +7,7 @@ In this section, we demonstrate the flexibility of our model when applied to a v
 
 \subsection{Coloring Pattern Templates}
 
-People can color patterns with a variety of different criteria in mind, which may even change during the coloring process. These preferences can range from the more general preference for any appealing coloring to more specific preferences such as using a particular palette, looking for local improvements to an existing coloring, or matching a specific style. We explore how our model can facilitate these scenarios.
+People can color patterns with a variety of criteria in mind, which may even change during the coloring process. These preferences can range from the more general preference for any appealing coloring to more specific preferences such as using a particular palette, looking for local improvements to an existing coloring, or matching a specific style. We explore how our model can facilitate these scenarios.
 
 %People can color patterns with a variety of different criteria in mind. Some have no specific preferences and are looking for any well-colored pattern. Others might have a specific color palette in mind and are looking for patterns that use exactly this palette. Still others might have a general idea of the coloring they want but would like to see if it can be improved upon. Finally, some people might want colorings that conform to a particular style, such as the style of a specific artist, or a more general style such as ``bright'' or ``dark''. Below, we explore how our model can help with each of these scenarios.
 
@@ -28,7 +28,7 @@ People can color patterns with a variety of different criteria in mind, which ma
 
 \paragraph{Coloring with fixed palettes} 
 
-Artists often draw inspiration from inspirational photographs and existing color themes and may have specific colors in mind when coloring in a pattern. Even with a fixed color palette, mapping different colors to different regions leads to a range of possible images, some more desirable than others. We can use our model's score to rank all possible permutations of the palette colors (excluding the color compatibility factor).
+Artists often draw inspiration from photographs and existing color themes and may have specific colors in mind when coloring in a pattern. Even with a fixed color palette, mapping different colors to different regions leads to a range of possible images, some more desirable than others. We can use our model's score to rank all possible permutations of the palette colors (excluding the color compatibility factor).
 
 Figure~\ref{fig:photographMatching} shows an example where colors from two photographs are applied to different pattern templates. A color palette is first automatically extracted from the input photograph~\cite{SharonPaletteExtraction}. Our algorithm then automatically computes a pleasing mapping from the colors in the extracted palette to regions in a given pattern template.
 %~\remark{Comment on e.g. why does it use white for the background?} 
@@ -59,7 +59,7 @@ Initial automatic suggestions & After fixing the stem to be green\\
 
 Although using a well-designed color palette often improves the look of a pattern, the spatial arrangement of those colors can make a dramatic difference in appearance. Figure~\ref{fig:permutation} shows two input color palettes for the bird pattern and the highest and lowest-scoring color assignments to the pattern using those palettes. These palettes were originally used by artists to color in this pattern on COLOURlovers. Because the pattern has 5 color groups, there are 120 possible color assignments for a given 5-color palette. Our model ranks the original artist-created color assignments as 39th (for the first palette) and 21st (for the second) out of the 120 permutations. Over a larger sampling of 188 patterns, artist-created colorings rank in the top 40\% overall, suggesting that the model captures general artist trends in pattern coloring. However, there may be stylistic variations between different artists that are not well predicted by a single model.
 
-In this example, the model terms that most distinguish the highest-scoring assignments from the lowest-scoring ones are the color name counts factors. The model prefers colors such as Yellow, Grey, and Green to Red-Orange and Orange-Brown for background regions. Colorings with orange background colors tend to score poorly, perhaps because there are few popular patterns with orange backgrounds in our training set.
+In this example, the model terms that most distinguish the highest-scoring assignments from the lowest-scoring ones are the color name counts factors. The model prefers colors such as Tan-Yellow, Grey, and Green-Black to Red-Orange and Orange for background regions. Colorings with orange background colors tend to score poorly, perhaps because there are few popular patterns with orange backgrounds in our training set.
 %Other distinguishing terms include perceptual difference between adjacent regions.
 Our model also predicts that foreground regions should more perceptually distinct from the background than from other foreground regions. Thus, it tends to assign the most distinct color in the palette to the background region.
 
@@ -144,7 +144,7 @@ Artist A&Artist B\\
 \label{fig:artistTraining}
 \end{figure*}
 
-\paragraph{Style capture} A powerful advantage of a data-driven approach is the ability to modify the underlying training source to achieve specialization of the resulting model. This ability allows our model to capture a specific style and color preferences such as ``high-contrast patterns'' by selecting a set of patterns with the desired property. Figure~\ref{fig:styleTraining} demonstrates this behavior using four style categories: \emph{Light}, \emph{Dark}, \emph{Bold}, and \emph{Mellow}. Using 17 training examples, our model can capture general properties of the example patterns such as the distribution of colors over the background regions in \emph{Light} and \emph{Dark} and the level of contrast in \emph{Bold} and \emph{Mellow}. The model can also capture the style of a specific artist, as shown in Figure~\ref{fig:artistTraining}. Here, 100 images from each artist were used for training. The sampled images mimic properties of each artist's style, such as the light backgrounds preferred by Artist A and the bold colors and dark backgrounds preferred by Artist B. The complete list of patterns used as training data for these examples can be found in the supplemental materials.
+\paragraph{Style capture} A powerful advantage of a data-driven approach is the ability to modify the training source to achieve specialization of the resulting model. This ability allows our model to capture a specific style and color preferences such as ``high-contrast patterns'' by selecting a set of patterns with the desired property. Figure~\ref{fig:styleTraining} demonstrates this behavior using four style categories: \emph{Light}, \emph{Dark}, \emph{Bold}, and \emph{Mellow}. Using 17 training examples, our model can capture general properties of the example patterns such as the distribution of colors over the background regions in \emph{Light} and \emph{Dark} and the level of contrast in \emph{Bold} and \emph{Mellow}. The model can also capture the style of a specific artist, as shown in Figure~\ref{fig:artistTraining}. Here, 100 images from each artist were used for training. The sampled images mimic properties of each artist's style, such as the light backgrounds preferred by Artist A and the bold colors and darker backgrounds preferred by Artist B. The complete list of patterns used as training data for these examples can be found in the supplemental materials.
 
 \subsection{Applications}
 
