--- a/latex/siggraph2013/approach.tex
+++ b/latex/siggraph2013/approach.tex
@@ -22,14 +22,14 @@ To generate attractive pattern colorings, a reasonable first step is to enforce 
 \includegraphics[width=.2\columnwidth]{figs/colorCompat/r_1_3_3-39}\\
 3.74&3.42&3.66&3.39\\
 \end{tabular}
-\caption{Patterns whose colors receive high scores under the color compatibility model of O'Donovan et al.~\shortcite{ODonovan}. The score assigned by the O'Donovan model is shown beneath each pattern; a typical pattern scores between 2 and 4. Many results exhibit problems such as adjacent equi-luminant regions and excessively saturated backgrounds.}
+\caption{Patterns whose colors receive high scores under the color compatibility model of O'Donovan et al.~\shortcite{ODonovan}. The score is shown beneath each pattern; a typical pattern scores between 2 and 4.}% Many results exhibit problems such as adjacent equi-luminant regions and excessively saturated backgrounds.}
 \label{fig:ColorCompatOnly}
 \end{figure}
 
-To overcome these problems, we turn to examples of well-colored patterns for help. If we inspect color groups that are large, highly connected, and spread across the entire pattern---indicative features of a background---we can see how saturated they are. This knowledge should prevent us from using excessively `loud' background colors. If we examine the contrast between adjacent pattern regions, we might find that large foreground regions have high contrast with the background but less contrast with thin borders and outlines. Enforcing these same properties in our own colorings should lead to better results.
+To overcome these problems, we turn to examples of well-colored patterns. If we inspect color groups that are large, highly connected, and spread across the entire pattern---indicative features of a background---we can see how saturated they are. This knowledge can prevent us from using excessively `loud' background colors. If we examine the contrast between adjacent pattern regions, we might find that large foreground regions have high contrast with the background but less contrast with thin borders. Enforcing these same properties in our own colorings should lead to better results.
 
 Consequently, the approach we take to pattern coloring is \emph{data-driven}: given a dataset of example patterns, we learn distributions over color properties such as saturation, lightness, and contrast for individual regions and for adjacent regions. We predict these distributions using discriminative spatial features of the pattern, such as the size and shape of different regions. Finally, we use the predicted distributions to score the goodness of pattern colorings.
 
-In the next sections, we introduce the dataset of patterns we use for our experiments (Section~\ref{sec:dataset}). Next, we describe the \emph{unary color functions} that we use to score the colors of indvidual pattern regions (Section~\ref{sec:unary}), as well the \emph{pairwise color functions} that score the colors of adjacent regions (Section~\ref{sec:binary}). While color compatibility alone does not predict good pattern colorings, it helps to enforce global consistency between colors, and our approach makes use of this ability (Section~\ref{sec:colorCompat}).
+In the next sections, we introduce the dataset of patterns used for our experiments (Section~\ref{sec:dataset}). Next, we describe the \emph{unary color functions} that we use to score the colors of indvidual pattern regions (Section~\ref{sec:unary}), as well the \emph{pairwise color functions} that score the colors of adjacent regions (Section~\ref{sec:binary}). While color compatibility alone does not predict good pattern colorings, it helps enforce global consistency between colors, and our approach makes use of this ability (Section~\ref{sec:colorCompat}).
 
-We then show how these three different types of scoring functions---\emph{unary}, \emph{pairwise}, and \emph{global}---can be combined into one unified model using the framework of probabilistic factor graphs (Section~\ref{sec:model}). The resulting model is very flexible: we can sample from it to generate a variety of new coloring suggestions, train it on different example sets to capture different coloring styles, and add additional constraints to it to support different usage scenarios (Section~\ref{sec:results}).
+We then show how these three types of scoring functions---\emph{unary}, \emph{pairwise}, and \emph{global}---can be combined into one unified model using the framework of probabilistic factor graphs (Section~\ref{sec:model}). The resulting model is very flexible: we can sample from it to generate a variety of new coloring suggestions, train it on different example sets to capture different coloring styles, and add additional constraints to it to support different usage scenarios (Section~\ref{sec:results}).
