--- a/latex/siggraph2013/background.tex
+++ b/latex/siggraph2013/background.tex
@@ -7,7 +7,7 @@ Related work has tackled problems similar to the one we address in this paper. W
 \paragraph{Creative color support tools}
 Addressing a problem similar to ours, Sauvaget and colleagues describe a system that takes an image divided into segments and a set of colors and computes a `harmonious' assignment of colors to segments based on contrast of proportions guidelines ~\shortcite{ColorizationUsingHarmony}. The system selects colors from a fixed palette, and users can specify the set of colors to be used and their relative amounts. However, these requirements can conflict with our goal of supporting exploratory coloring, in which the user may not know in advance the colors she wants and would like to see many plausible suggestions. In contrast, our model is trained from artist-created images. It does not require the user to specify colors in advance, but its probabilistic framework is general enough to support this input if the user desires it.
 
-In the theme of user exploration, Meier and colleagues develop a suite of interactive interfaces to help users browse color themes and experiment with compositions~\shortcite{ColorPaletteTools}. However, they do not focus on algorithms for generating coloring suggestions. In this paper, we explore generating coloring suggestions while taking into account user input.
+In the theme of user exploration, Meier and colleagues develop a suite of interactive interfaces to help users browse color themes and experiment with compositions~\shortcite{ColorPaletteTools}. However, they do not focus on algorithms for generating coloring suggestions. In this paper, we explore generating suggestions while considering user input.
 
 \paragraph{Color harmony \& compatibility}
 Computer graphics, aesthetics, and psychology research has introduced theories and models to predict the compatibility of two or more colors~\cite{CohenOrHarmonization,Munsell,PalmerColorPreference,Itten}. Recently, O'Donovan and colleagues presented a data-driven model that predicts the numeric ratings people would give to five-color `color themes'~\shortcite{ODonovan}.
